--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "miha klasinc",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.15.2",
     "morgan": "^1.8.1",
     "request": "^2.81.0"
